--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -2,10 +2,16 @@
   "version": "0.2.0",
   "configurations": [
     {
-      "command": "./node_modules/.bin/astro dev",
-      "name": "Development server",
+      "type": "node",
       "request": "launch",
-      "type": "node-terminal"
+      "name": "Launch Astro Dev Server",
+      "program": "${workspaceFolder}/node_modules/.bin/astro",
+      "args": ["dev"],
+      "cwd": "${workspaceFolder}",
+      "console": "integratedTerminal",
+      "env": {
+        "NODE_ENV": "development"
+      }
     }
   ]
 }
